--- a/front-end/public/register.html
+++ b/front-end/public/register.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Register - SB Admin</title>
+        <title>Registrati</title>
         <link href="css/styles.css" rel="stylesheet" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
 
@@ -22,34 +22,34 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-7">
                                 <div class="card shadow-lg border-0 rounded-lg mt-5">
-                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Create Account</h3></div>
+                                    <div class="card-header"><h3 class="text-center font-weight-light my-4">Crea un Account</h3></div>
                                     <div class="card-body">
                                         <form>
                                             <div class="row mb-3">
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" />
-                                                        <label for="inputFirstName">First name</label>
+                                                        <input class="form-control" id="inputFirstName" type="text" placeholder="Inserire il proprio nome" />
+                                                        <label for="inputFirstName">Nome</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-floating">
-                                                        <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" />
-                                                        <label for="inputLastName">Last name</label>
+                                                        <input class="form-control" id="inputLastName" type="text" placeholder="Inserire il proprio cognome" />
+                                                        <label for="inputLastName">Cognome</label>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="row mb-3">
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" id="inputEmail" type="email" placeholder="name@example.com" />
-                                                        <label for="inputEmail">Email address</label>
+                                                        <input class="form-control" id="inputEmail" type="email" placeholder="nome@example.com" />
+                                                        <label for="inputEmail">Email</label>
                                                     </div>
                                                 </div>
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
-                                                        <input class="form-control" id="inputNumPhone" type="text" placeholder="Phone number" />
-                                                        <label for="inputNumPhone">Phone Number</label>
+                                                        <input class="form-control" id="inputNumPhone" type="text" placeholder="Numero di telefono" />
+                                                        <label for="inputNumPhone">Numero di telefono</label>
                                                     </div>
                                                 </div>
                                             </div>
@@ -63,17 +63,17 @@
                                                 <div class="col-md-6">
                                                     <div class="form-floating mb-3 mb-md-0">
                                                         <input class="form-control" id="inputPasswordConfirm" type="password" placeholder="Confirm password" />
-                                                        <label for="inputPasswordConfirm">Confirm Password</label>
+                                                        <label for="inputPasswordConfirm">Conferma Password</label>
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="mt-4 mb-0">
-                                                <div class="d-grid"><a class="btn btn-primary btn-block" id="registerButton">Create Account</a></div>
+                                                <div class="d-grid"><a class="btn btn-primary btn-block" id="registerButton">Crea Account</a></div>
                                             </div>
                                         </form>
                                     </div>
                                     <div class="card-footer text-center py-3">
-                                        <div class="small"><a href="login.html">Have an account? Go to login</a></div>
+                                        <div class="small"><a href="login.html">Hai un account? Accedi!</a></div>
                                     </div>
                                 </div>
                             </div>
