--- a/front-end/public/user/history.html
+++ b/front-end/public/user/history.html
@@ -76,7 +76,7 @@
                 </div>
                 Dashboard
               </a>
-              <div class="sb-sidenav-menu-heading">Manage</div>
+              <div class="sb-sidenav-menu-heading">Utente</div>
               <a class="nav-link active" href="history.html">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-columns"></i>
