--- a/front-end/public/user/sell.html
+++ b/front-end/public/user/sell.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Static Navigation - SB Admin</title>
+    <title>Vendite</title>
     <link href="../css/styles.css" rel="stylesheet" />
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
@@ -76,7 +76,7 @@
                 </div>
                 Dashboard
               </a>
-              <div class="sb-sidenav-menu-heading">Manage</div>
+              <div class="sb-sidenav-menu-heading">Utente</div>
               <a class="nav-link" href="history.html">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-columns"></i>
