--- a/front-end/public/user/index.html
+++ b/front-end/public/user/index.html
@@ -74,7 +74,7 @@
                 </div>
                 Dashboard
               </a>
-              <div class="sb-sidenav-menu-heading">Manage</div>
+              <div class="sb-sidenav-menu-heading">Utente</div>
               <a class="nav-link" href="history.html">
                 <div class="sb-nav-link-icon">
                   <i class="fas fa-columns"></i>
