:bug: Fix generic bug.

--- a/front-end/public/user/history.html
+++ b/front-end/public/user/history.html
@@ -20,11 +20,11 @@
     <style>
       .sell_card {
         border-radius: 10px;
-        background-color: rgb(255, 137, 163);
+        box-shadow: rgb(238 240 241) 0px 8px 8px;
       }
       .buy_card {
         border-radius: 10px;
-        background-color: rgb(138, 192, 138);
+        box-shadow: rgb(238 240 241) 0px 8px 8px;
       }
     </style>
     <script
