--- a/front-end/public/user/index.html
+++ b/front-end/public/user/index.html
@@ -132,10 +132,10 @@
                   class="btn btn-default closeModal"
                   data-dismiss="modal"
                 >
-                  Close
+                  Chiudi
                 </button>
                 <button type="button" class="btn btn-primary" id="buyButton">
-                  Buy Now
+                  Compra
                 </button>
               </div>
             </div>
